@@ -6,8 +6,8 @@ jEdit 5.0 version history
 
 Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
 Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl, Robert Schwenn,
-Martin Raspe, Max Funk, SPennington, Ingo Tomahogh, Jarek Czekalski and
-Stephen Blackheath for contributing to this release.
+Martin Raspe, Max Funk, SPennington, Ingo Tomahogh, Jarek Czekalski,
+Stephen Blackheath and Chris Sullins for contributing to this release.
 
 {{{ Bug fixes
 
@@ -72,6 +72,8 @@ Stephen Blackheath for contributing to this release.
 
 }}}
 {{{ Editing
+
+- Dart mode added (Patch #3483431 - Chris Sullins)
 
 - Haskell mode:
   - Removed the fixed 8 character indent and tab size, #3470636.
